[gd_scene load_steps=8 format=2]

[ext_resource path="res://enemies/EnemyTemplate.gd" type="Script" id=1]
[ext_resource path="res://Assets/Powerup76.wav" type="AudioStream" id=2]
[ext_resource path="res://img/Enemy.png" type="Texture" id=3]
[ext_resource path="res://Assets/Explosion60.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 2.5 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Warp:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=3]
resource_name = "warp"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Vector2( 100, 1 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Warp:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2( 0, 0.5 )
shape = SubResource( 1 )

[node name="RayCast_Left" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -10, 0 )

[node name="RayCast_Right" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 10, 0 )

[node name="Explosion" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = 20.0

[node name="Warp" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )

[node name="Direction" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="Respawn" type="Timer" parent="."]

[node name="Attack" type="Timer" parent="."]
autostart = true

[node name="WarpAnimation" type="AnimationPlayer" parent="."]
autoplay = "warp"
anims/RESET = SubResource( 2 )
anims/warp = SubResource( 3 )

[connection signal="timeout" from="Direction" to="." method="_on_Direction_timeout"]
[connection signal="timeout" from="Respawn" to="." method="_on_Respawn_timeout"]
[connection signal="timeout" from="Attack" to="." method="_on_Attack_timeout"]
